En 146 implement storing task in db (#151)
* sending to TP and europeana off

* context hierarchy add

* conversion task context add

* context entities files moved to model dir

* conversion task context resolving add

* conversion context add

* from method on converters entity returns proper value

* conversion context repository add

* conversion context retrieval add to conversion service

* transcribe task context entity add

* transcribe context repository add

* enrich task context entity add

* enrich task context repository add;

* enriching context fetching add

* removed from context abstract class record field and moved to concrete classes

* entity inheritance add

* removed record state field from context

* remove id and record getters and setters from update task context

* remove id and record from transcribe task context

* remove id and record from enrich task context

* remove id and record from conversion task context

* remove id and record from conversion context

* update task context repository add

* update task context fetching add

* context service abstract class create

* conversion task context service add

* conversion context service add

* enrich task context service add

* transcribe task context service add

* conversion context merged into conversion task context

* context mediator implementation made

* creation transformation state model for conversion data transformer

* europeana conversion data holder transformer strategy add

* some comments add to state

* DDB Conversion data strategy add

* conversion data holder trasnformer add

* removal of conversion data raw from conversion data entity

* add conditional execution of assignement and function to context class

* db inheritance change to table per class

* context utils service add

* saving of context add for each context service

* deleting add to context services

* change of empty 